--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       @font-face {
         font-family: "Mojang";
-        src: url("fonts/Mojang.otf") format("truetype");
+        src: url("fonts/mojang.otf") format("truetype");
       }
 
       body {
