Add loading screen and mobile warning; implement smooth scrolling for anchor links

--- a/index.html
+++ b/index.html
@@ -108,14 +108,16 @@
         pointer-events: none;
       }
 
-      
-
-
     </style>
   </head>
   <body>
+    <!-- if in mobile view or size display this -->
     <div id="loading-text" class="loadings position-absolute top-50 start-50 translate-middle text-white text-center" style="font-family: 'MinecraftiaRegular', sans-serif; font-size: 2rem; text-shadow: 2px 2px 4px #000000;">
       Loading...
+    </div>
+
+      <div id="mobile-warning" class="d-none loadings position-absolute top-50 start-50 translate-middle text-white text-center" style="font-family: 'MinecraftiaRegular', sans-serif; font-size: 2rem; text-shadow: 2px 2px 4px #000000;">
+      Please rotate your device to landscape mode for the best experience.
     </div>
     <div class="overlay">
       <div class="container">
