--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css">
     <script type="module" src="script.js"></script>
     <script
       defer
@@ -23,99 +24,12 @@
       integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y"
       crossorigin="anonymous"
     ></script>
-    <style>
-      @font-face {
-        font-family: "MinecraftiaRegular";
-        src: url("fonts/Minecraftia-Regular.ttf") format("truetype");
-      }
-
-      @font-face {
-        font-family: "Mojang";
-        src: url("fonts/mojang.otf") format("truetype");
-      }
-
-      body {
-        margin: 0;
-        overflow: hidden;
-      }
-      canvas {
-        display: block;
-      }
-
-      .overlay {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: url("textures/panorama_overlay.png") no-repeat center;
-        background-size: cover;
-        pointer-events: none;
-      }
-
-      .mlogo {
-        background: url("Assets/Logo.png") no-repeat center;
-        background-size: contain;
-        width: 100%;
-        max-width: 90vh;
-        aspect-ratio: 2 / 1;
-        height: fit-content;
-        display: inline-block;
-        border: none;
-        box-shadow: none;
-        pointer-events: none;
-      }
-
-      .splash {
-        position: absolute;
-        top: 75%;
-        left: 95%;
-        transform: translate(-50%, -50%) rotate(-20deg);
-        width: auto;
-        max-width: 80%;
-        text-align: center;
-        pointer-events: none;
-        animation: splashAnimation 1.5s infinite;
-      }
-      @keyframes splashAnimation {
-        0%,
-        100% {
-          transform: translate(-50%, -50%) rotate(-20deg) scale(1);
-        }
-        50% {
-          transform: translate(-50%, -50%) rotate(-20deg) scale(1.1);
-        }
-      }
-
-      .loadings {
-        z-index: 10;
-        background-color: rgba(239, 46, 59, 1);
-        padding: 1rem 2rem;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100vw;
-        height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-
-      /* loading fadeout effect */
-      .loadings.fade-out {
-        opacity: 0;
-        transition: opacity 1s ease-out;
-        pointer-events: none;
-      }
-
-    </style>
   </head>
   <body>
     <!-- if in mobile view or size display this -->
     <div id="loading-text" class="loadings position-absolute top-50 start-50 translate-middle text-white text-center" style="font-family: 'MinecraftiaRegular', sans-serif; font-size: 2rem; text-shadow: 2px 2px 4px #000000;">
       Loading...
     </div>
-
       <div id="mobile-warning" class="d-none loadings position-absolute top-50 start-50 translate-middle text-white text-center" style="font-family: 'MinecraftiaRegular', sans-serif; font-size: 2rem; text-shadow: 2px 2px 4px #000000;">
       Please rotate your device to landscape mode for the best experience.
     </div>
@@ -129,7 +43,25 @@
               </h1>
             </span>
           </div>
-          <div class="mb-3 border"></div>
+          <div class="mb-3">
+            <div class="vstack gap-3">
+              <div class="pt-2">
+                <span class="mcbutton">
+                  <a href="#about" class="text-center mt-3">About Me</a>
+                </span>
+              </div>
+              <div>
+                <span class="mcbutton">
+                  <a href="#projects" class="text-center mt-3">Projects</a>
+                </span>
+              </div>
+              <div class="pb-2">
+                <span class="mcbutton">
+                  <a href="#contact" class="text-center mt-3">Contact Me</a>
+                </span>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
