Refactor splash section and add navigation buttons; update styles for improved layout and functionality

--- a/index.html
+++ b/index.html
@@ -43,17 +43,40 @@
       <div class="container">
         <div class="row text-center">
           <div class="mb-3">
-            <span class="fs-1 position-relative img-fluid mlogo m-0 p-0">
+            <span class="position-relative mlogo">
               <h1 class="splash text-warning text-nowrap" style="font-family: 'MinecraftiaRegular', sans-serif; font-size: clamp(2vh, 2vw, 3vh); text-shadow: 2px 2px 4px #000000; font-weight: bold;" id="splash-text">
                 it's Fucking Splash Text!
               </h1>
             </span>
           </div>
-          <div class="mb-3">
-            
+          <div class="mt-5">
+            <span class="MC-Btn mb-3">
+                <a class="MC-Btn-text">
+                  About Me
+                </a>
+              </span>
+              <span class="MC-Btn mb-3">
+                <a class="MC-Btn-text">
+                  Projects
+                </a>
+              </span>
+              <span class="MC-Btn">
+                <a class="MC-Btn-text">
+                  Contact Me
+                </a>
+              </span>
           </div>
         </div>
       </div>
-    </div>
+      <!-- footer -->
+      <div class="position-absolute bottom-0 start-50 translate-middle-x mb-3 w-100">
+        <span class="text-white" style="font-family: 'MinecraftiaRegular', sans-serif; text-shadow: 2px 2px 4px #000000; font-weight: bold;">
+          <div class="hstack">
+            <span class="mx-3">Portfolio v1.0</span>
+            <span class="mx-auto"></span>
+            <span class="mx-3">Copyright © 2025 Unknownplanet40</span>
+          </div>
+        </span>
+      </div>
   </body>
 </html>
