--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               </h1>
             </span>
           </div>
-          <div class="mt-5">
+          <div class="mt-5 pt-5 d-flex flex-column align-items-center">
             <span class="MC-Btn mb-3">
                 <a class="MC-Btn-text">
                   About Me
@@ -65,6 +65,25 @@
                   Contact Me
                 </a>
               </span>
+              <div class="hstack w-50 justify-content-center mt-3 mx-auto">
+                <span class="MC-Btn-sm me-3">
+                  <a class="MC-Btn-text-sm Icon-GitHub"></a>
+                </span>
+                <span class="MC-Btn-md me-5">
+                  <a class="MC-Btn-text-sm">
+                    Facebook
+                  </a>
+                </span>
+                <span class="MC-Btn-md ms-4">
+                  <a class="MC-Btn-text-sm">
+                    LinkedIn
+                  </a>
+                </span>
+                <span class="MC-Btn-sm ms-3">
+                  <a class="MC-Btn-text-sm Icon-Resume">
+                  </a>
+                </span>
+              </div>
           </div>
         </div>
       </div>
@@ -74,25 +93,7 @@
           <div class="hstack">
             <span class="mx-3">Portfolio v1.0</span>
             <span class="mx-auto"></span>
-            <span class="mx-3">Copyright © <span id="current-year"></span> <span id="owner-name">Your Name</span></span>
-            <script>
-              // Set current year
-              document.getElementById('current-year').textContent = new Date().getFullYear();
-
-              // check if it's in localhost
-                if (window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1') {
-                document.getElementById('owner-name').textContent = "Unknownplanet40 (on localhost)";
-                } else if (window.location.hostname === 'unknownplanet40.github.io' && window.location.pathname.startsWith('/Port-folio/')) {
-                // Get part before .github
-                const owner = window.location.hostname.split('.github')[0];
-                document.getElementById('owner-name').textContent = owner.charAt(0).toUpperCase() + owner.slice(1);
-                } else {
-                const urlParams = new URLSearchParams(window.location.search);
-                const owner = urlParams.get('owner') || 'Your Name';
-                document.getElementById('owner-name').textContent = owner;
-                }
-
-            </script>
+            <span class="mx-3">Copyright © <span id="current-year"></span> <span id="owner-name">Owner Name</span></span>
           </div>
         </span>
       </div>
