Added Panorama Variations

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
     />
+    <link rel="shortcut icon" href="Assets/Gprofile.gif" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
     <script type="module" src="script.js"></script>
     <script
@@ -78,20 +79,20 @@
             </span>
           </div>
           <div class="mt-5 pt-5 d-flex flex-column align-items-center">
-            <span class="MC-Btn mb-3">
+            <span class="MC-Btn mb-2">
               <a
                 class="MC-Btn-text btn-Clicksound">
                 About Me
               </a>
             </span>
-            <span class="MC-Btn mb-3 btn-Clicksound">
+            <span class="MC-Btn mb-2 btn-Clicksound">
               <a class="MC-Btn-text"> Projects </a>
             </span>
             <span class="MC-Btn btn-Clicksound">
               <a class="MC-Btn-text"> Contact Me </a>
             </span>
-            <div class="hstack w-50 justify-content-center mt-3 mx-auto">
-              <span class="MC-Btn-sm me-3 btn-Clicksound">
+            <div class="hstack w-50 justify-content-center mt-2 mx-auto">
+              <span class="MC-Btn-sm me-2 btn-Clicksound">
                 <a class="MC-Btn-text-sm Icon-GitHub"></a>
               </span>
               <span class="MC-Btn-md me-5 btn-Clicksound">
