--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
     </div>
 
     <div
-      class="loading-overlay d-flex justify-content-center align-items-center w-100 h-100 position-fixed top-0 start-0 z-3 d-block d-md-none"
+      class="loading-overlay d-flex justify-content-center align-items-center w-100 h-100 position-fixed top-0 start-0 d-block d-md-none"
+      style="z-index: 9999"
       id="Mobile-loading-screen"
     >
       <span
@@ -80,8 +81,7 @@
           </div>
           <div class="mt-5 pt-5 d-flex flex-column align-items-center">
             <span class="MC-Btn mb-2">
-              <a
-                class="MC-Btn-text btn-Clicksound">
+              <a class="MC-Btn-text btn-Clicksound">
                 About Me
               </a>
             </span>
@@ -128,27 +128,41 @@
           </div>
         </span>
       </div>
-      <div
-        class="modal fade"
-        id="staticBackdrop"
-        data-bs-backdrop="static"
-        data-bs-keyboard="false"
-        tabindex="-1"
-        aria-labelledby="staticBackdropLabel"
-        aria-hidden="true"
-      >
-        <div class="modal-dialog modal-dialog-centered modal-lg">
-          <div class="modal-content bg-transparent border">
-            <div class="row g-0 row-cols-1 row-cols-md-2">
-              <div class="col-6">
-                <p>
-                  Hello! I'm [Your Name], a passionate developer with a love
-                  for creating innovative solutions. With expertise in [Your
-                  Skills/Technologies], I enjoy turning ideas into reality.
-                  Welcome to my portfolio!
-                </p>
+      <!-- Popup Modal -->
+      <!-- Popup Modal (placed behind Mobile-loading-screen) -->
+      <div class="modal-container">
+        <div
+          class="modal fade"
+          id="PopupModal"
+          data-bs-backdrop="static"
+          data-bs-keyboard="false"
+          tabindex="-1"
+          aria-labelledby="popupModalLabel"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog">
+            <div class="modal-content bg-transparent border-0">
+              <div class="modal-body text-center" style="position: relative">
+                <span class="dialogBG rounded"></span>
+                <div class="PopDialog position-relative rounded">
+                    <div class="position-absolute top-0 start-50 translate-middle-x
+                    " style="width: 68%; right: 16%">
+                    <p class="mb-0">Reminder</p>
+                    <button
+                      type="button"
+                      class="btn-close btn-close-Custom btn-Clicksound position-absolute top-0 end-0 m-2 z-3"
+                      data-bs-dismiss="modal"
+                      aria-label="Close"
+                    ></button>
+                    </div>
+                  <div class="d-flex flex-column align-items-center justify-content-center position-relative" style="top: 15%; height: 80%;">
+                    <p class="mx-auto popDialogLabel text-center">
+                      You need to interact with the page to enable sound
+                      effects.
+                    </p>
+                  </div>
+                </div>
               </div>
-              <div class="col-6"></div>
             </div>
           </div>
         </div>
